# dimappio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: core.h  main.c  utils.c  utils.h  version.h.in
src/dimappio/: CMakeLists.txt  core.h  options.c  options.h  version.h
src/dimappio/midi/: device.c  device.h  driver.c  driver.h  eventing.c  eventing.h  mapping.c  mapping.h  monitor.c  monitor.h  nodes.c  nodes.h  notes.c  output.c  output.h  parser.c  parser.h
src/dimappio/midi/internals/: alsa.c  alsa.h  alsa_decoder.c  alsa_decoder.h  coremidi.c  coremidi.h
src/dimappio/ui/: interface.c  interface.h
src/main/: CMakeLists.txt  main.c
src/mapper/: CMakeLists.txt  main.c
src/midi/: driver.c  driver.h  globals.h  mapping.c  mapping.h  mappings.c  mappings.h  parser.c  parser.h  utils.c  utils.h
src/midi/internals/: alsa.c  alsa.h  alsa_decoder.c  alsa_decoder.h  alsa_raw_midi.c  alsa_raw_midi.h  coremidi.c  coremidi.h  winmm.c
src/midimap/: CMakeLists.txt  colours.h  core.h  options.c  options.h  utils.c  utils.h
src/midimap/midi/: device.c  device.h  driver.c  driver.h  eventing.c  eventing.h  globals.h  mapping.c  mapping.h  monitor.c  monitor.h  nodes.c  nodes.h  notes.h  output.c  output.h  parser.c  parser.h
src/midimap/midi/internals/: alsa.c  alsa.h  alsa_decoder.c  coremidi.c  coremidi.h
src/midimap/ui/: interface.c
src/ui/: interface.c  interface.h
tests/: CMakeLists.txt  key_nodes.c  map_parser.c  note_parser.c  test_key_maps.c  test_key_nodes.c  test_map_parser.c  test_note_parser.c  test_utils.c
tests/helpers/: helpers.c
